--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
+    "react-dnd-preview": "^8.0.3",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
     "recoil": "^0.7.7",
