--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.3",
     "recoil": "^0.7.7",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
