--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@atlaskit/pragmatic-drag-and-drop": "^1.1.12",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
@@ -17,6 +18,7 @@
     "react-hook-form": "^7.51.3",
     "recoil": "^0.7.7",
     "styled-components": "^6.1.8",
+    "tiny-invariant": "^1.3.3",
     "yarn": "^1.22.22"
   },
   "devDependencies": {
