--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "react-hook-form": "^7.51.3",
     "recoil": "^0.7.7",
     "styled-components": "^6.1.8",
-    "tiny-invariant": "^1.3.3",
-    "yarn": "^1.22.22"
+    "tiny-invariant": "^1.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
