--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@atlaskit/pragmatic-drag-and-drop": "^1.2.0",
     "@atlaskit/pragmatic-drag-and-drop-hitbox": "^1.0.3",
+    "bind-event-listener": "^3.0.0",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
