--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@atlaskit/pragmatic-drag-and-drop": "^1.2.0",
     "@atlaskit/pragmatic-drag-and-drop-hitbox": "^1.0.3",
     "bind-event-listener": "^3.0.0",
+    "fast-average-color": "^9.4.0",
+    "node-vibrant": "^3.1.6",
     "react": "^18.2.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
